--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,31 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
+  "short_name": "twilytic",
+  "name": "twilytic",
+  "icons": [{
+    "src": "favicon-16x16.png",
+    "sizes": "16x16",
+    "type": "image/png"
+  }, {
+    "src": "favicon.ico",
+    "sizes": "16x16",
+    "type": "image/png"
+  }, {
+    "src": "favicon-32x32.png",
+    "sizes": "32x32",
+    "type": "image/png"
+  }, {
+    "src": "favicon-128.png",
+    "sizes": "128x128",
+    "type": "image/png"
+  }, {
+    "src": "apple-touch-icon-144x144g",
+    "sizes": "144x144",
+    "type": "image/png"
+  }, {
+    "src": "apple-touch-icon-152x152",
+    "sizes": "152x152",
+    "type": "image/png"
+  }],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
